Trying to fix light and dark mode

--- a/public/styles.css
+++ b/public/styles.css
@@ -660,16 +660,6 @@ video {
   grid-row-start: 1;
 }
 
-.mx-3 {
-  margin-left: 0.75rem;
-  margin-right: 0.75rem;
-}
-
-.my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
 .mb-1 {
   margin-bottom: 0.25rem;
 }
@@ -980,10 +970,6 @@ video {
   padding-top: 2.25rem;
 }
 
-.align-bottom {
-  vertical-align: bottom;
-}
-
 .font-mono {
   font-family: IBM Plex Mono, monospace;
 }
@@ -1032,10 +1018,6 @@ video {
   line-height: 16px;
 }
 
-.text-\[clamp\(\)\] {
-  font-size: clamp();
-}
-
 .font-light {
   font-weight: 300;
 }
@@ -1072,10 +1054,6 @@ video {
 
 .opacity-50 {
   opacity: 0.5;
-}
-
-.opacity-85 {
-  opacity: 0.85;
 }
 
 .mix-blend-difference {
@@ -1127,12 +1105,12 @@ video {
     grid-column: span 6 / span 6;
   }
 
-  .md\:col-span-8 {
-    grid-column: span 8 / span 8;
-  }
-
   .md\:col-span-7 {
     grid-column: span 7 / span 7;
+  }
+
+  .md\:col-span-8 {
+    grid-column: span 8 / span 8;
   }
 
   .md\:col-start-1 {
@@ -1165,16 +1143,6 @@ video {
 
   .md\:m-0 {
     margin: 0px;
-  }
-
-  .md\:mx-8 {
-    margin-left: 2rem;
-    margin-right: 2rem;
-  }
-
-  .md\:my-8 {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
   }
 
   .md\:mb-4 {
@@ -1236,6 +1204,11 @@ video {
     text-align: right;
   }
 
+  .md\:text-blg {
+    font-size: 16px;
+    line-height: 28px;
+  }
+
   .md\:text-dmd {
     font-size: 96px;
     line-height: 96px;
@@ -1246,19 +1219,14 @@ video {
     line-height: 14vw;
   }
 
-  .md\:text-lmd {
-    font-size: 12px;
-    line-height: 16px;
-  }
-
   .md\:text-hmd {
     font-size: 28px;
     line-height: 36px;
   }
 
-  .md\:text-blg {
-    font-size: 16px;
-    line-height: 28px;
+  .md\:text-lmd {
+    font-size: 12px;
+    line-height: 16px;
   }
 }
 
@@ -1275,6 +1243,10 @@ video {
     grid-column: span 10 / span 10;
   }
 
+  .lg\:col-span-11 {
+    grid-column: span 11 / span 11;
+  }
+
   .lg\:col-span-12 {
     grid-column: span 12 / span 12;
   }
@@ -1289,10 +1261,6 @@ video {
 
   .lg\:col-span-5 {
     grid-column: span 5 / span 5;
-  }
-
-  .lg\:col-span-11 {
-    grid-column: span 11 / span 11;
   }
 
   .lg\:col-start-1 {
@@ -1323,20 +1291,16 @@ video {
     grid-column-end: 12;
   }
 
+  .lg\:mt-0 {
+    margin-top: 0px;
+  }
+
   .lg\:mt-14 {
     margin-top: 3.5rem;
   }
 
   .lg\:mt-3 {
     margin-top: 0.75rem;
-  }
-
-  .lg\:mt-10 {
-    margin-top: 2.5rem;
-  }
-
-  .lg\:mt-0 {
-    margin-top: 0px;
   }
 
   .lg\:box-content {
@@ -1373,10 +1337,6 @@ video {
 
   .lg\:justify-between {
     justify-content: space-between;
-  }
-
-  .lg\:justify-items-stretch {
-    justify-items: stretch;
   }
 
   .lg\:gap-3 {
@@ -1426,11 +1386,6 @@ video {
     line-height: 20px;
   }
 
-  .lg\:text-blg {
-    font-size: 16px;
-    line-height: 28px;
-  }
-
   .lg\:leading-\[4\.75rem\] {
     line-height: 4.75rem;
   }
@@ -1453,12 +1408,12 @@ video {
     background-color: rgb(255 255 255 / var(--tw-bg-opacity));
   }
 
-  .dark\:fill-white {
-    fill: #fff;
-  }
-
   .dark\:fill-black {
     fill: #101010;
+  }
+
+  .dark\:fill-white {
+    fill: #fff;
   }
 
   .dark\:text-black {
